--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webpage Design</title>
+    <title>Webpage Design</title> 
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
     <script>
         function openForm() {
