--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         function closeForm() {
             document.getElementById("myForm").style.display = "none";
         }
+        function myFunction() {
+            document.getElementById("navresponse").style.display = "block";
+        }
     </script>
 </head>
 <body>
